- add `object-fit` to prevent image distort  - bump version

--- a/src/index.styl
+++ b/src/index.styl
@@ -2,3 +2,5 @@ img
   max-width: 100%
   max-height: 80vh
   width: 100%
+  /* to prevent distort */
+  object-fit: contain
